@@ -1,3 +1,7 @@
+2009-10-07 Guido Scholz <guido.scholz@bayernline.de>
+	* src/midiwidget.cpp: MIDI channel numbering changed from 0..15
+	to 1..16.
+
 2009-10-04 Karsten Wiese <fzuuzf@googlemail.com>
 	* src/midiwidget.cpp: Fix crash unbinding multiple controllables
 	connected to the same midi controller by using QPersistentModelIndex.
